# django-add-comments

./: README.md  pyproject.toml
.github/workflows/: main.yml
comments/: forms.py  models.py  urls.py  views.py
comments/docs/: add_comments.md  backend.md  frontend.md  setup.md
comments/migrations/: 0001_initial.py
comments/templates/: base.html
comments/templates/base_template/: _meta.html  _nav.html
comments/templates/comment/: editor.html  inserter.html  list.html
comments/templates/comments/: card.html  detail.html  editor.html  form.html  inserter.html  list.html  toggle.html
comments/templatetags/: comments.py
config/: settings.py  urls.py
sentinels/: admin.py  apps.py  models.py  urls.py  views.py
sentinels/migrations/: 0001_initial.py
sentinels/templates/: sentinel_detail.html  sentinel_list.html
tests/: conftest.py  test_comment_delete.py  test_comment_edit.py  test_comment_sentinel.py  test_comment_view.py  test_comments_templatetags.py
utils/: django_init.py  notebook.ipynb
